--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Quicksand";
+  color: rgb(25, 25, 25);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  max-width: 600;
+  justify-content: center;
+}
+
+.header {
+  display: flex;
+  background-color: teal;
+  border-bottom: 1px black;
+  justify-content: center;
+}
+
+.header-title {
+  display: flex;
+}
+
+.main {
+  display: grid;
+  background-color: white;
+  place-items: center;
+}
+
+.main-container {
+  width: 90%;
+  background-color: teal;
+  margin: 5px;
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 5px 10px 8px #888888;
 }
