--- a/src/index.css
+++ b/src/index.css
@@ -64,16 +64,11 @@ body {
   cursor: pointer;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  border-radius: 5px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -93,4 +88,15 @@ body {
 
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
+}
+
+.currency-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.list-item {
+  margin: 5px;
+  width: 20%;
 }
