--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,15 @@ body {
   display: flex;
 }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  margin: 5px; 
+  bottom: 5px; 
+}
+
 .main {
   display: grid;
   background-color: white;
@@ -31,13 +40,14 @@ body {
 .main-container {
   display: flex;
   flex-direction: column;
-  width: 90%;
+  position: absolute;
+  min-width: 95%;
+  min-height: 90%;
   background-color: teal;
   justify-content: center;
   margin: 5px;
   padding: 5px;
   border-radius: 5px;
-  box-shadow: 5px 10px 8px #888888;
 }
 
 .currency-select-container {
@@ -56,37 +66,55 @@ body {
 }
 
 .currency-button {
-  background-color: #4CAF50;
+  background-color: #63d4b2;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   cursor: pointer;
 }
 
-.dropdown-content {
+.currency-list-content {
   display: none;
-  position: absolute;
+  height: 200px;
+  overflow: hidden;
   background-color: #f9f9f9;
   border-radius: 5px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-.dropdown-content a {
+@keyframes currency-list-content{
+  from {
+    margin-top: 100%;
+    height: 300%; 
+  }
+
+  to {
+    margin-top: 0%;
+    height: 100%;
+  }
+}
+
+
+.currency-list-content a {
   color: black;
+  animation: 10s slide-up;
+  margin-top: 0%;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.currency-list-content a:hover {background-color: #f1f1f1}
 
-.dropdown:hover .dropdown-content {
+.currency-list-content:hover .currency-list-content {
   display: block;
 }
 
-.dropdown:hover .dropbtn {
+.currency-list-content:hover .currency-button {
   background-color: #3e8e41;
 }
 
