--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 body {
   max-width: 600;
-  justify-content: center;
+  margin: 0 auto;
 }
 
 .header {
@@ -26,6 +26,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-content: center;
+  text-align: center;
   position: absolute;
   margin: 5px; 
   bottom: 5px; 
@@ -35,14 +37,15 @@ body {
   display: grid;
   background-color: white;
   place-items: center;
+  justify-content: center;
 }
 
 .main-container {
   display: flex;
   flex-direction: column;
   position: absolute;
-  min-width: 95%;
-  min-height: 90%;
+  width: 95%;
+  height: 90%;
   background-color: teal;
   justify-content: center;
   margin: 5px;
@@ -60,14 +63,24 @@ body {
   justify-content: center;
 }
 
-.currency-output-container {
+.currenct-exchange-container {
   display: flex;
   justify-content: center;
+}
+
+.exchange-input {
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  width: 34%;
 }
 
 .currency-button {
   background-color: #63d4b2;
   color: white;
+  margin: 5px;
+  width: 35%;
   padding: 16px;
   font-size: 16px;
   border: none;
@@ -78,7 +91,8 @@ body {
 
 .currency-list-content {
   display: none;
-  height: 200px;
+  height: 60vw;
+  width: 99vw;
   overflow: hidden;
   background-color: #f9f9f9;
   border-radius: 5px;
@@ -98,7 +112,6 @@ body {
   }
 }
 
-
 .currency-list-content a {
   color: black;
   animation: 10s slide-up;
@@ -108,13 +121,11 @@ body {
   display: block;
 }
 
-.currency-list-content a:hover {background-color: #f1f1f1}
-
 .currency-list-content:hover .currency-list-content {
   display: block;
 }
 
-.currency-list-content:hover .currency-button {
+.currency-button:hover {
   background-color: #3e8e41;
 }
 
@@ -127,4 +138,8 @@ body {
 .list-item {
   margin: 5px;
   width: 20%;
+}
+
+.list-item:hover {
+  background-color: #f1f1f1;
 }
