--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@ body {
   margin: 5px;
   padding: 5px;
   border-radius: 5px;
+  z-index: 0;
 }
 
 .currency-select-container {
@@ -95,30 +96,12 @@ body {
   width: 99vw;
   overflow: hidden;
   background-color: #f9f9f9;
+  color: black;
+  margin-top: 0%;
+  padding: 12px 16px;
   border-radius: 5px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-}
-
-@keyframes currency-list-content{
-  from {
-    margin-top: 100%;
-    height: 300%; 
-  }
-
-  to {
-    margin-top: 0%;
-    height: 100%;
-  }
-}
-
-.currency-list-content {
-  color: black;
-  animation: 10s slide-up;
-  margin-top: 0%;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
 }
 
 .currency-list-content:hover .currency-list-content {
