--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,34 @@ body {
   border: none;
   border-radius: 5px;
   width: 90%;
+  text-align: center;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.exchange-output {
+  margin: 5px;
+  border: none;
+  width: 90%;
+  text-align: center;
+}
+
+.exchange-button {
+  color: white;
+  text-align: center;
+  width: 50%;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  margin-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #63d4b2;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.exchange-button:hover {
+  background-color: #3e8e41;
 }
 
 .currency-button {
@@ -97,7 +124,7 @@ body {
   display: none;
   height: 60vw;
   width: 99vw;
-  overflow: hidden;
+  overflow: scroll;
   background-color: #f9f9f9;
   color: black;
   margin-top: 0%;
