--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@ body {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.exchange-button:hover {
+.exchange-button:active {
   background-color: #3e8e41;
 }
 
