--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 }
 
 body {
-  max-width: 600;
-  margin: 0 auto;
+  place-items: center;
+  background-color: teal;
 }
 
 .header {
@@ -16,10 +16,7 @@ body {
   background-color: teal;
   border-bottom: 1px black;
   justify-content: center;
-}
-
-.header-title {
-  display: flex;
+  width: 100%;
 }
 
 .footer {
@@ -35,7 +32,8 @@ body {
 
 .main {
   display: grid;
-  background-color: white;
+  background-image: linear-gradient(black, teal);
+  background-size: cover;
   place-items: center;
   justify-content: center;
 }
@@ -44,13 +42,13 @@ body {
   display: flex;
   flex-direction: column;
   position: absolute;
-  width: 95%;
+  background-image: linear-gradient(black, teal);
+  background-size: cover;
+  width: 100%;
   height: 90%;
-  background-color: teal;
   justify-content: center;
-  margin: 5px;
+  place-items: center;
   padding: 5px;
-  border-radius: 5px;
   z-index: 0;
 }
 
