--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,7 @@ body {
   border-radius: 5px;
   width: 90%;
   text-align: center;
+  font-size: 16px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
@@ -106,7 +107,7 @@ body {
 }
 
 .exchange-button:active {
-  background-color: #3e8e41;
+  background-color: #83d8c3;
 }
 
 .currency-button {
@@ -120,7 +121,7 @@ body {
 
 .currency-list-content {
   display: none;
-  height: 60vw;
+  height: 60vh;
   width: 90vw;
   overflow: scroll;
   background-color: #f9f9f9;
@@ -137,7 +138,7 @@ body {
 }
 
 .currency-button:hover {
-  background-color: #3e8e41;
+  background-color: #83d8c3;
 }
 
 .currency-list {
