--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,10 @@ body {
   justify-content: center;
   align-content: center;
   text-align: center;
+  place-items: center;
+  font-size: 10px;
   position: absolute;
-  bottom: 5px;
+  bottom: 0px;
   width: 100vw; 
 }
 
@@ -94,7 +96,7 @@ body {
 .exchange-button {
   color: white;
   text-align: center;
-  width: 50%;
+  width: 180px;
   padding: 16px;
   font-size: 16px;
   border: none;
@@ -154,4 +156,10 @@ body {
 
 .list-item:hover {
   background-color: #f1f1f1;
+}
+
+.refresh-button {
+  color: white;
+  margin: 5px;
+  padding: 5px;
 }
