--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   margin: 0;
   font-family: "Quicksand";
   color: rgb(25, 25, 25);
+  box-sizing: border-box;
 }
 
 body {
@@ -14,26 +15,26 @@ body {
 .header {
   display: flex;
   background-color: teal;
-  border-bottom: 1px black;
   justify-content: center;
   width: 100vw;
+  position: absolute;
+  top: 0;
 }
 
 .footer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  text-align: center;
   place-items: center;
   font-size: 10px;
-  position: absolute;
-  bottom: 0px;
   width: 100vw; 
+  position: absolute;
+  bottom: 0px; 
 }
 
 .main {
   display: grid;
+  width: 100vw;
+  height: 100vh;
   background-image: linear-gradient(black, teal);
   background-size: cover;
   place-items: center;
@@ -44,14 +45,16 @@ body {
   display: flex;
   flex-direction: column;
   position: absolute;
-  background-image: linear-gradient(black, teal);
-  background-size: cover;
-  width: 97vw;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   place-items: center;
   padding: 5px;
   z-index: 0;
+}
+
+.exchange-section {
+  
 }
 
 .exchange-container {
@@ -73,7 +76,6 @@ body {
 .amount p {
   color: white;
   text-align: center;
-  margin : 0 auto;
 }
 
 .exchange-input {
@@ -96,16 +98,17 @@ body {
 .exchange-button {
   color: white;
   text-align: center;
-  width: 180px;
+  width: 100%;
   padding: 16px;
   font-size: 16px;
   border: none;
-  margin-top: 5px;
-  margin-left: auto;
-  margin-right: auto;
   background-color: #63d4b2;
   border-radius: 5px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.exchange-button p {
+
 }
 
 .exchange-button:active {
@@ -115,7 +118,6 @@ body {
 .currency-button {
   color: white;
   text-align: center;
-  width: 50%;
   padding: 16px;
   font-size: 16px;
   border: none;
@@ -128,7 +130,6 @@ body {
   overflow: scroll;
   background-color: #f9f9f9;
   color: black;
-  margin-top: 0%;
   padding: 12px 16px;
   border-radius: 5px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -159,7 +160,6 @@ body {
 }
 
 .refresh-button {
-  color: white;
   margin: 5px;
   padding: 5px;
 }
