--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,9 +1,9 @@
 .footer {
   display: flex;
   flex-direction: column;
-  place-items: center;
   font-size: 10px;
-  width: 100%; 
   position: absolute;
+  place-items: center;
+  max-width: 100vw; 
   bottom: 0px; 
 }
