--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,21 +1,12 @@
-.main {
-  display: grid;
-  width: 100vw;
-  height: 100vh;
-  background-image: linear-gradient(black, teal);
-  background-size: cover;
-  place-items: center;
-  justify-content: center;
-}
-
-.main-container {
+.Main {
   display: flex;
   flex-direction: column;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  margin: auto;
+  background-image: linear-gradient(black, teal);
+  background-size: cover;
   justify-content: center;
-  place-items: center;
-  padding: 5px;
   z-index: 0;
 }
