--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,13 @@
   display: grid;
   place-items: center;
 }
+
+.main-container {  
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: linear-gradient(black, teal);
+  background-size: cover;
+}
