--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,11 @@
 .app {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
-  background-image: linear-gradient(black, teal);
+  background: black;
+  background: linear-gradient(rgba(0,0,0), rgba(0,128,128));
   background-size: cover;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.main-container {  
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
